Fix bug in drawer control section alignment

--- a/src/components/views/data/data.module.scss
+++ b/src/components/views/data/data.module.scss
@@ -110,6 +110,7 @@
   // content top section
   .contentTop {
     display: flex;
+    align-items: flex-start;
     // TODO elegantly
     > :not(:last-child) {
       margin-right: 5.6rem;
